// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BottomBar. Snapshots > WithMessage  1`] = `
<div>
  <div
    class="_BottomBar_8761ae _Static_8761ae"
    data-testid="bottom-bar"
  >
    <div
      class="_TopBlock_8761ae"
    >
      <div
        class="_LeftBlock_8761ae"
      >
        <p
          class="_Left_a0e0af _Medium_a0e0af _Body_a0e0af _TextPrimary_a0e0af"
          data-testid="content"
          text="Monatliche Rate"
        >
          Monatliche Rate
        </p>
        <p
          class="_Left_a0e0af _Regular_a0e0af _Body_a0e0af _TextSecondary_a0e0af"
          data-testid="content"
          text="Laufzeit"
        >
          Laufzeit
        </p>
      </div>
      <div
        class="_RightBlock_8761ae"
      >
        <p
          class="_Left_a0e0af _Medium_a0e0af _Body_a0e0af _TextPrimary_a0e0af"
          data-testid="content"
          text="39,99 €"
        >
          39,99 €
        </p>
        <p
          class="_Left_a0e0af _Regular_a0e0af _Body_a0e0af _TextSecondary_a0e0af"
          data-testid="content"
          text="24 Monate"
        >
          24 Monate
        </p>
      </div>
    </div>
    <p
      class="_Message_8761ae _Center_a0e0af _Regular_a0e0af _Body_a0e0af _TextSecondary_a0e0af"
      data-testid="content"
    >
      Sie können den Vorgang jederzeit abbrechen.
    </p>
    <button
      class="_Button_ffa210 _Button_8761ae _LG_ffa210 _Primary_ffa210 _FullWidth_ffa210"
      data-testid="control-button"
      type="button"
    >
      <div
        class="_Animation_700a30 _Content_ffa210"
        data-testid="animation-fade-scale"
      >
        <div
          style="opacity: 1; transform: none;"
        >
          <span
            class="_Text_ffa210"
          >
            Weiter
          </span>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`BottomBar. Snapshots > WithoutMessage  1`] = `
<div>
  <div
    class="_BottomBar_8761ae _Static_8761ae"
    data-testid="bottom-bar"
  >
    <div
      class="_TopBlock_8761ae"
    >
      <div
        class="_LeftBlock_8761ae"
      >
        <p
          class="_Left_a0e0af _Medium_a0e0af _Body_a0e0af _TextPrimary_a0e0af"
          data-testid="content"
          text="Monatliche Rate"
        >
          Monatliche Rate
        </p>
        <p
          class="_Left_a0e0af _Regular_a0e0af _Body_a0e0af _TextSecondary_a0e0af"
          data-testid="content"
          text="Laufzeit"
        >
          Laufzeit
        </p>
      </div>
      <div
        class="_RightBlock_8761ae"
      >
        <p
          class="_Left_a0e0af _Medium_a0e0af _Body_a0e0af _TextPrimary_a0e0af"
          data-testid="content"
          text="39,99 €"
        >
          39,99 €
        </p>
        <p
          class="_Left_a0e0af _Regular_a0e0af _Body_a0e0af _TextSecondary_a0e0af"
          data-testid="content"
          text="24 Monate"
        >
          24 Monate
        </p>
      </div>
    </div>
    <button
      class="_Button_ffa210 _Button_8761ae _LG_ffa210 _Primary_ffa210 _FullWidth_ffa210"
      data-testid="control-button"
      type="button"
    >
      <div
        class="_Animation_700a30 _Content_ffa210"
        data-testid="animation-fade-scale"
      >
        <div
          style="opacity: 1; transform: none;"
        >
          <span
            class="_Text_ffa210"
          >
            Weiter
          </span>
        </div>
      </div>
    </button>
  </div>
</div>
`;
